Miscellanous category spacing fixed

--- a/food-to-prepare/src/App.css
+++ b/food-to-prepare/src/App.css
@@ -332,7 +332,6 @@ p {
 .category {
   border: 1px dotted var(--text-color);
   display: flex;
-  justify-content: space-between;
   padding: 10px 20px;
   margin: 10px 20px;
   gap: 10px;
